# rusty-socket-echo

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md  justfile
src/: client.rs  lib.rs  main.rs  message.rs  server.rs
src/utils/: mod.rs  shutdown.rs  telemetry.rs  wait.rs
